webapl-pd/deploy-2.yaml
##
## テストアプリ
##
---
## デプロイメント 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapl-pd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapl-pd
  template:
    metadata:
      labels:
        app: webapl-pd
    spec:
      containers:
      - name: webapl-pd
        image: maho/webapl-pd:0.98
        imagePullPolicy: Always
---
## サービス
apiVersion: v1
kind: Service
metadata:
  name: webapl-pd
spec:
  selector:
    app: webapl-pd
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
#  type: LoadBalancer
