webapl-pd/ingress.yaml
## Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapl2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2-proxy.labo.local:4443/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2-proxy.labo.local:4443/oauth2/start?rd=https://ingress.k8s1.labo.local/webapl2/"
    nginx.ingress.kubernetes.io/auth-response-headers: authorization,x-forwarded-email,x-forwarded-user

spec:
  ingressClassName: nginx
  rules:
  - host: ingress.k8s1.labo.local
    http:
      paths:
      - path: /webapl2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: webapl-pd
            port:
              number: 3000
